Fix overflow
(cherry picked from commit ce52183d592c89c7e143a1f843b14ce280fe6a7d)

--- a/packages/runner-ct/src/app/app.scss
+++ b/packages/runner-ct/src/app/app.scss
@@ -13,8 +13,8 @@
 .ct-bottom-pane { 
   height: 100%;
   .reporter { 
-    position: static;
     height: 100%;
+    width: 100%;
   }
 }
 
